--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -21,6 +21,7 @@
 </div>
 <div class="row">
   <div class="container">
+    {% if featured_table %}
     <div class="col s6">
       <div class="card large">
         <div class="card-image">
@@ -42,6 +43,7 @@
         </div>
       </div>
     </div>
+    {% endif %}
     {% if featured_table %}
     
     {% if items %}
